update pb gen command

--- a/pb/Makefile
+++ b/pb/Makefile
@@ -1,2 +1,3 @@
 regenerate:
-	(protoc -I=. -I=$(GOPATH)/src/github.com/gogo/protobuf/protobuf -I=$(GOPATH)/src --gogo_out=plugins=grpc:. pb.proto)
+	# you might need to go get github.com/gogo/protobuf/protoc-gen-gofast
+	(protoc -I=. -I=$(GOPATH)/src/github.com/gogo/protobuf/protobuf -I=$(GOPATH)/src --gofast_out=plugins=grpc:. pb.proto)
